Stereo render wrong when using compositor file output node #62767

Closed
opened 2019-03-20 11:20:13 +01:00 by Bogumił · 10 comments

System Information
Operating system:Win 10
Graphics card: GTX 1080Ti

Blender Version
Broken: 2.79b
Worked: 2.79b

I am dealing with very complex scene that contains lots of grass and trees as particle systems and couple microdisplacement stuff of overal weight 1.7 GB. My problem is when I try to render stereoscopic 3D the only output I get is anaglyphic (red-cyan in one image) - no matter what option I choose. The same goes to render passes. However, when I copy some random assets from this scene to another, clean one, rendering stereoscopy works properly. Plan is to render each view separately so I can use it in post production and 3D tv - anaglyph render is useless to me.

Exact steps for others to reproduce the error
I attached the same scene just without most assets. Set output destination, play with stereoscopy settings and press render. Every render will be red-cyan, no matter what you choose.

testProj.blend

**System Information** Operating system:Win 10 Graphics card: GTX 1080Ti **Blender Version** Broken: 2.79b Worked: 2.79b I am dealing with very complex scene that contains lots of grass and trees as particle systems and couple microdisplacement stuff of overal weight 1.7 GB. My problem is when I try to render stereoscopic 3D the only output I get is anaglyphic (red-cyan in one image) - no matter what option I choose. The same goes to render passes. However, when I copy some random assets from this scene to another, clean one, rendering stereoscopy works properly. Plan is to render each view separately so I can use it in post production and 3D tv - anaglyph render is useless to me. **Exact steps for others to reproduce the error** I attached the same scene just without most assets. Set output destination, play with stereoscopy settings and press render. Every render will be red-cyan, no matter what you choose. [testProj.blend](https://archive.blender.org/developer/F6854381/testProj.blend)
Author

Added subscriber: @Bogu

Added subscriber: @Bogu

Added subscriber: @brecht

Added subscriber: @brecht

Can you specify exactly which part is not working?

  • Render animation output can be set to save anaglyph or individual views.
  • The image editor can display anaglyph or separate left/right views, with a toggle in the header.
  • When saving from the image editor, you can also choose anaglyph or individual views.
Can you specify exactly which part is not working? * Render animation output can be set to save anaglyph or individual views. * The image editor can display anaglyph or separate left/right views, with a toggle in the header. * When saving from the image editor, you can also choose anaglyph or individual views.

Also please test the latest daily build of 2.79 or 2.80 to see if the problem is still there:
https://builder.blender.org/download/

Also please test the latest daily build of 2.79 or 2.80 to see if the problem is still there: https://builder.blender.org/download/
Author

In #62767#644711, @brecht wrote:
Can you specify exactly which part is not working?

  • Render animation output can be set to save anaglyph or individual views.
  • The image editor can display anaglyph or separate left/right views, with a toggle in the header.
  • When saving from the image editor, you can also choose anaglyph or individual views.

My goal is to render two separate images (L,R) so I can use them in post production or any stereoscopic software. Whether I choose "top to bottom" or "individual" the output (files that land on my drive) are always anaglyphic (red-cyan). I tried it on blender 2.79.7 and it's still there.

edit*

From image editor I can save as individual. Only that way.

> In #62767#644711, @brecht wrote: > Can you specify exactly which part is not working? > * Render animation output can be set to save anaglyph or individual views. > * The image editor can display anaglyph or separate left/right views, with a toggle in the header. > * When saving from the image editor, you can also choose anaglyph or individual views. My goal is to render two separate images (L,R) so I can use them in post production or any stereoscopic software. Whether I choose "top to bottom" or "individual" the output (files that land on my drive) are always anaglyphic (red-cyan). I tried it on blender 2.79.7 and it's still there. edit* From image editor I can save as individual. Only that way.

But can you specify which of those 3 things you are doing, and which ones fail?

But can you specify which of those 3 things you are doing, and which ones fail?
Author

Render animation output can be set to save anaglyph or individual views - NOT WORKING
The image editor can display anaglyph or separate left/right views, with a toggle in the header - WORKING
When saving from the image editor, you can also choose anaglyph or individual views - WORKING

Render animation output can be set to save anaglyph or individual views - **NOT WORKING** The image editor can display anaglyph or separate left/right views, with a toggle in the header - **WORKING** When saving from the image editor, you can also choose anaglyph or individual views - **WORKING**
Author

I noticed just now, when I plug render layer node directly into composite node the output of it is L and R views separately. However other render passes are still anaglyphic.

I noticed just now, when I plug **render layer node** directly into **composite node** the output of it is **L** and **R** views separately. However other render passes are still anaglyphic.
Brecht Van Lommel changed title from Blender 2.79 stereo always render as anaglyph to Stereo render wrong when using compositor file output node 2019-03-20 19:20:28 +01:00
Jeroen Bakker was assigned by Brecht Van Lommel 2019-03-26 14:00:03 +01:00
Member

My observations for the file output node :

  • When selecting OpenEXR Multilayer per view an OpenEXR Multi layer is created (_L, _R). I didn't see the option to save them as Multiview OpenEXR files what is supported when using the compositor node.
  • When selecting any other file format (including OpenEXR) the views are merged using the settings in the node. As these settings cannot be adjusted by the user it defaults to Anaglyph Red-Cyan.
  • (Unrelated) There is an inconsistency in the File output node where the base is used as folder or as file.

Seems to be that the node reads the defaults (from the node themselves), but users don't have the possibility to alter these. I would suggest that the user would be able to set the export settings when multi view is active for the scene. And use a similar panel as in the Output properties panel eg template_image_views.

Panel used to work once (years ago), but due to NULL pointer pre-check it is not rendered anymore.

My observations for the file output node : * When selecting `OpenEXR Multilayer` per view an OpenEXR Multi layer is created (_L, _R). I didn't see the option to save them as Multiview OpenEXR files what is supported when using the compositor node. * When selecting any other file format (including OpenEXR) the views are merged using the settings in the node. As these settings cannot be adjusted by the user it defaults to Anaglyph Red-Cyan. * (Unrelated) There is an inconsistency in the File output node where the base is used as folder or as file. Seems to be that the node reads the defaults (from the node themselves), but users don't have the possibility to alter these. I would suggest that the user would be able to set the export settings when multi view is active for the scene. And use a similar panel as in the Output properties panel eg `template_image_views`. Panel used to work once (years ago), but due to NULL pointer pre-check it is not rendered anymore.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62767
No description provided.