source/blender/editors/space_image/image_buttons.c
@@ -1155,25 +1155,24 @@ void uiTemplateImageFormatViews(uiLayout *layout, PointerRNA *imfptr, PointerRNA
 {
   ImageFormatData *imf = imfptr->data;
 
-  if (ptr == NULL) {
-    return;
+  if (ptr != NULL) {
+    uiItemR(layout, ptr, "use_multiview", 0, NULL, ICON_NONE);
+    if (!RNA_boolean_get(ptr, "use_multiview")) {
+      return;
+    }
   }
 
-  uiItemR(layout, ptr, "use_multiview", 0, NULL, ICON_NONE);
+  if (imf->imtype != R_IMF_IMTYPE_MULTILAYER) {
+    PropertyRNA *prop;
+    PointerRNA stereo3d_format_ptr;
 
-  if (RNA_boolean_get(ptr, "use_multiview")) {
-    if (imf->imtype != R_IMF_IMTYPE_MULTILAYER) {
-      PropertyRNA *prop;
-      PointerRNA stereo3d_format_ptr;
+    prop = RNA_struct_find_property(imfptr, "stereo_3d_format");
+    stereo3d_format_ptr = RNA_property_pointer_get(imfptr, prop);
 
-      prop = RNA_struct_find_property(imfptr, "stereo_3d_format");
-      stereo3d_format_ptr = RNA_property_pointer_get(imfptr, prop);
-
-      uiTemplateViewsFormat(layout, imfptr, &stereo3d_format_ptr);
-    }
-    else {
-      uiTemplateViewsFormat(layout, imfptr, NULL);
-    }
+    uiTemplateViewsFormat(layout, imfptr, &stereo3d_format_ptr);
+  }
+  else {
+    uiTemplateViewsFormat(layout, imfptr, NULL);
   }
 }
 
